--- a/css/mobile.css
+++ b/css/mobile.css
@@ -279,6 +279,24 @@
     .mobile-menu nav ul.sub-check a span b {
         margin-left: 5px;
     }
+    .mobile-menu nav ul.statistic li {
+        width: 40% !important;
+    }
+    .mobile-menu nav ul.statistic li a {
+        display: flex;
+        align-items: center;
+        word-break: keep-all;
+    }
+    .mobile-menu nav ul.statistic li img {
+        width: 40px;
+        border-radius: 50%;
+    }
+    .mobile-menu nav ul.statistic li span {
+        text-align: left;
+        margin-left: 10px;
+        line-height: 1.4;
+        font-size: 12px;
+    }
 
     .mobile-menu .bottom ul {
         border-top: 1px solid #eee;
@@ -1016,8 +1034,25 @@
         margin-top: 10px !important;
     }
 
+    .sub .statistic-list {
+        margin: -5px;
+    }
+    .sub .statistic-list li {
+        width: 33.3%;
+        font-size: 13px;
+    }
+    .sub .statistic-list li a {
+        padding: 13px 0;
+        margin: 5px;
+    }
+    .sub .statistic-list li a img {
+        width: 40px;
+        margin-bottom: 5px;
+    }
+
     .sub .statistic .question {
         flex-direction: column;
+        margin-bottom: 30px;
     }
     .sub .statistic .question h3 {
         flex-direction: column;
