--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ header .container {
 }
 
 header .logo {
-    height: 1.3rem;
+    height: 46px;
     flex-basis: 200px;
 }
 
@@ -194,23 +194,23 @@ header .util a:last-of-type {
     word-break: keep-all;
 }
 
-.main .swiper-slide:nth-of-type(1) {
+.main .swiper-slide.bg-1 {
     background-color: #F8EFED;
 }
 
-.main .swiper-slide:nth-of-type(2) {
+.main .swiper-slide.bg-2 {
     background-color: #E1EFF0;
 }
 
-.main .swiper-slide:nth-of-type(3) {
+.main .swiper-slide.bg-3 {
     background-color: #E6F2E6;
 }
 
-.main .swiper-slide:nth-of-type(4) {
+.main .swiper-slide.bg-4 {
     background-color: #F5F5DF;
 }
 
-.main .swiper-slide:nth-of-type(5) {
+.main .swiper-slide.bg-5 {
     background-color: #F5F0F7;
 }
 
