--- a/css/styles.css
+++ b/css/styles.css
@@ -552,7 +552,7 @@ header .util a:last-of-type {
 .main .share-heart .content-list li {
     /* margin-right: 2.5%; */
     margin: 1rem;
-    width: 25%;
+    width: 50%;
     border-radius: 10px;
     overflow: hidden;
     border: 1px solid #eee;
@@ -564,7 +564,7 @@ header .util a:last-of-type {
 
 .main .share-heart .content-list li .photo {
     position: relative;
-    padding-top: 65%;
+    padding-top: 45%;
     overflow: hidden;
 }
 
@@ -572,6 +572,7 @@ header .util a:last-of-type {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
+    width: 100%;
 }
 
 .main .share-heart .content-list li dl {
@@ -2571,6 +2572,29 @@ footer .go-top.is-active {
 .wecaning-start .mission textarea {
     height: 150px;
 }
+.wecaning-start .mission .field {
+    position: relative;
+}
+.wecaning-start .mission .text-limit {
+    position: absolute;
+    bottom: 10px;
+    right: 20px;
+    display: flex;
+    font-size: 13px;
+}
+.wecaning-start .mission .text-limit .current {
+    font-weight: 600;
+}
+.wecaning-start .mission .text-limit .current::after {
+    display: inline-block;
+    content: "/";
+    margin: 0 5px;
+    font-weight: normal;
+    color: #aaa;
+}
+.wecaning-start .mission .text-limit .total {
+    color: #aaa;
+}
 
 .wecaning-start .mission-title {
     display: flex;
@@ -2589,6 +2613,9 @@ footer .go-top.is-active {
     font-weight: 600;
     margin-bottom: 1rem;
     font-size: .9rem;
+}
+.wecaning-start .mission-title .icon img {
+    flex-shrink: 0;
 }
 
 .wecaning-start .mission .rating {
