--- a/css/mobile.css
+++ b/css/mobile.css
@@ -525,7 +525,7 @@
     }
 
     .main .share-heart .content-list {
-        padding: 15px;
+        padding: 0 15px;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(1, 1fr);
@@ -1333,6 +1333,61 @@
         font-size: 14px;
         height: 3rem;
         margin: 0 !important;
+    }
+
+    .wecaning-start-main-visual {
+        margin-bottom: 2rem;
+    }
+
+    .wecaning-start-main-visual .subject {
+        align-items: center;
+        padding-left: 0;
+    }
+    .wecaning-start-main-visual .subject sup {
+        font-size: .9rem;
+    }
+    .wecaning-start-main-visual .subject h1 {
+        font-size: 3rem;
+        margin-bottom: 10rem;
+        letter-spacing: -2px;
+    }
+    .wecaning-start-main-visual .subject .button {
+        width: auto;
+        padding: 0 40px;
+    }
+
+    .banner {
+        margin: 2rem 0;
+    }
+    .banner .container {
+        padding: 0 20px !important;
+    }
+
+    .movie-about {
+        margin: 2rem 0;
+    }
+    .movie-about .container {
+        padding: 2rem;
+    }
+    .movie-about .text {
+        line-height: 1;
+    }
+    .movie-about .text img {
+        width: 80px;
+        margin-right: 1rem;
+    }
+    .movie-about .text .desc span {
+        font-size: .7rem;
+    }
+    .movie-about .text .desc h2 {
+        font-size: 1.7rem;
+    }
+
+    .main .post-list.is-3 li {
+        width: 100%;
+    }
+    .main .post-list.is-3 li:nth-of-type(n+2) {
+        display: block;
     }
 
 }
