--- a/css/styles.css
+++ b/css/styles.css
@@ -2746,7 +2746,7 @@ footer .go-top.is-active {
     justify-content: center;
     height: 100%;
     width: 100%;
-    padding-left: 14vw;
+    padding-left: 250px;
 }
 .wecaning-start-main-visual .subject sup {
     font-size: 1.25rem;
@@ -2760,8 +2760,9 @@ footer .go-top.is-active {
     margin-bottom: 1rem;
     color: #333;
 }
-.wecaning-start-main-visual .subject .button {
-    width: 330px;
+.wecaning-start-main-visual .subject .buttons {
+    flex-direction: column;
+    align-items: flex-start;
 }
 .banner {
     margin: 100px 0;
@@ -2850,4 +2851,27 @@ footer .go-top.is-active {
 }
 .smart-parent-life {
     margin-bottom: 100px;
+}
+.go-button {
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    line-height: 1.2;
+    font-weight: 600;
+    opacity: 0;
+    transition: all .3s;
+}
+.go-button.is-active {
+    opacity: 1;
+}
+.go-button a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    background-color: #f4763c;
+    text-align: center;
 }
